# quadrotor_control

./: .gitignore  CODESTYLE.md  README.md
apprenticeship/: trajectory.R  trajectory.py  trajectory_circle_out  trajectory_circle_payload_wind_out
apprenticeship/trajectory_circle/: 3  5
apprenticeship/trajectory_circle_payload_wind/: 1  2  3  4  5  6
demonstration_control/: CMakeLists.txt  package.xml  run_path.cpp
demonstration_control/launch/: quad.launch
hector_keyboard_controller/: CMakeLists.txt  README.md  package.xml
hector_keyboard_controller/launch/: hector_keyboard.launch  quad_keyboard.launch
hector_keyboard_controller/scripts/: __init__.py  base_controller.py  keyboard.py  keyboard_base.py  keyboard_motors.py  keyboard_twist.py
hector_keyboard_controller/scripts/controllers/: keyboard.py  sarsa.py
hector_keyboard_controller/scripts/misc/: helpers.py
hector_keyboard_controller/scripts/quadrotor/: Quadrotor.py
hector_keyboard_controller/scripts/reinforce/: Agent.py
quadrotor_control/: CMakeLists.txt  package.xml
report/abdeali/: .gitignore  iitm.bst  iitmdiss.cls  main.tex  refs.bib
report/abdeali/gimp files/: quadrotor_rotors.xcf  waypoint.xcf
report/abdeali/images/: checkpoint.xcf  figure.py  gradient.py  payload.xcf  purepursuit.xcf  quadrotor.xcf  quadrotor_states_actions.xcf  timewarp.xcf
report/kunal/: iitmdiss.cls  main.tex  refs.bib  t1enc.sty
rl_agent/: CMakeLists.txt  package.xml
rl_agent/cmake/: FindGSL.cmake
rl_agent/include/rl_agent/: DiscretizationAgent.hh  NeuralNetwork.h  NullAgent.hh  Pegasus.hh  QLearner.hh  Sarsa.hh
rl_agent/include/rl_agent/policy/: NeuralNetwork.h  utils.cpp
rl_agent/src/: agent.cpp
rl_agent/src/Agent/: DiscretizationAgent.cc  Pegasus.cc  QLearner.cc  Sarsa.cc  SavedPolicy.cc
rl_agent/src/Policy/: NeuralNetwork.cpp
rl_common/: CMakeLists.txt  package.xml
rl_common/include/rl_common/: ExperienceFile.hh  Random.h  core.hh
rl_common/msg/: RLStateReward.msg
rl_common/src/: core.cc  trajectory.R  trajectory.py
rl_common/src/trajectory_circle/: 1  2  4
rl_common/srv/: RLRunSim.srv
rl_env/: CMakeLists.txt  package.xml
rl_env/include/rl_env/: CartPole.hh  FuelRooms.hh  Gridworld.hh  HectorQuad.hh  Hector_quadrotor.hh  LightWorld.hh  MountainCar.hh  RobotCarVel.hh  Taxi.hh  TwoRooms.hh  energyrooms.hh  fourrooms.hh  stocks.hh  taxi.hh  tworooms.hh
rl_env/include/rl_env/points/: Points.h  PointsBase.h  PointsCircle.h  PointsHelix.h  PointsRectangle.h
rl_env/include/rl_env/trajectory/: PurePursuit.h  PurePursuitCircle.h  PurePursuitFile.h  PurePursuitPoints.h  Pursuit.h  PursuitCircle.h  Trajectory.h  Waypoints.h  WaypointsCircle.h  WaypointsFile.h  WaypointsHelix.h  WaypointsPoints.h
rl_env/launch/: quad.launch
rl_env/src/: env.cpp
rl_env/src/Env/: CartPole.cc  FuelRooms.cc  Gridworld.cc  HectorQuad.cc  Hector_quadrotor.cc  LightWorld.cc  MountainCar.cc  RobotCarVel.cc  Taxi.cc  TwoRooms.cc  energyrooms.cc  fourrooms.cc  gridworld.cc  stocks.cc  taxi.cc  tworooms.cc
rl_env/src/Env/HectorQuad/: quad.gazebo.xacro  quad.rviz  quad.world  world.cc
rl_env/src/Trajectory/: PointsBase.cpp  PointsCircle.cpp  PointsHelix.cpp  PointsRectangle.cpp  PurePursuit.cpp  PurePursuitCircle.cpp  PurePursuitFile.cpp  Pursuit.cpp  PursuitCircle.cpp  Trajectory.cpp  Waypoints.cpp  WaypointsCircle.cpp  WaypointsFile.cpp  WaypointsHelix.cpp
rl_experiment/: CMakeLists.txt  package.xml
rl_experiment/launch/: demo_hectorquad_sarsa.launch  demo_taxi_qlearner.launch  demo_taxi_sarsa.launch  quad.launch
rl_msgs/: CMakeLists.txt  package.xml
rl_msgs/msg/: RLAction.msg
rl_policy/: CMakeLists.txt  package.xml
rl_policy/include/rl_policy/: NeuralNetwork.h  Policy.h  utils.cpp
rl_policy/src/Policy/: NeuralNetwork.cpp
rl_py/: CMakeLists.txt  agent.py  env.py  package.xml
rl_py/rl_agent/: Agent.py  Sarsa.py  cli_args.py  constants.py
rl_py/rl_env/: Environment.py  Experience.py  Gridworld.py  Taxi.py  cli_args.py
