<package>
  <name>rl_ros</name>
  <version>0.0.1</version>
  <description>
    rl_ros gives a framework in ROS to do Reinforcement learning. It's an updated version of the original reinforcement_learning package made by Todd Hester
  </description>
  <maintainer email="kunalgrover05@gmail.com">Kunal Grover</maintainer>

  <license>BSD</license>
  <author email="kunalgrover05@gmail.com">Kunal Grover</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rl_agent</run_depend>
  <run_depend>rl_env</run_depend>
  <run_depend>rl_experiment</run_depend>
  <run_depend>hector_keyboard_controller</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
