<package>
  <name>rl_policy</name>
  <version>0.0.1</version>
  <description>
     A set of reinforcement learning policies to learn various tasks.
  </description>
  <maintainer email="kunalgrover05@gmail.com">Kunal Grover</maintainer>

  <license>BSD</license>
  <author email="kunalgrover05@gmail.com">Kunal Grover</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  
  <!-- Dependencies needed after this package is compiled. -->
  
  <!-- Dependencies needed only for running tests. -->

  <export>
     <cpp cflags="-I${prefix}/include"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
  </export>

</package>


