<package>
  <name>rl_py</name>
  <version>0.0.1</version>
  <description>
     RL framework for ROS in python
  </description>
  <maintainer email="kunalgrover05@gmail.com">Kunal Grover</maintainer>

  <license>BSD</license>
  <author email="kunalgrover05@gmail.com">Kunal Grover</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
